<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/mainmenu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal" >

    <Button
        android:id="@+id/menuButton"
        style="@style/BoardStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:background="@drawable/custom_button"
        android:text="@string/menu"
        android:textColor="@color/black" />

    <LinearLayout
        style="@style/BoardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/menuButton"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <include
            android:id="@+id/top_header"
            layout="@layout/inc_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:background="@drawable/text_frame"
                    android:text="@string/rule1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:background="@drawable/text_frame"
                    android:text="@string/rule2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:background="@drawable/text_frame"
                    android:text="@string/rule3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>