<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/mainmenu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal" >

    <LinearLayout
        style="@style/BoardStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/top_header"
            layout="@layout/inc_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dip"
            android:text="@string/intelligence"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/custom_button"
            android:drawSelectorOnTop="true"
            android:entries="@+array/intelligenceItems"
            android:prompt="@+string/intelligence_short"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pickButtonLayout"
        style="@style/BoardStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="2"
            android:background="@drawable/custom_button"
            android:text="@string/save"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/cancel"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>